# Berkeley-Crossword-Solver

./: .gitignore  Makefile  README.md  berkeley.cpp  bits.cpp  bits.h  bt.cpp  clue.cpp  compress.cpp  data.cpp  display.cpp  dump.cpp  fill.cpp  fitb.cpp  fitb.h  flamingo.cpp  geom.cpp  gui.cpp  gui_marriott.cpp  learn.cpp  learn.h  lev.cpp  manifest  mincut.cpp  models.py  multiword.cpp  pos.cpp  puz.cpp  pycluer.cpp  pycluer.h  rebus.cpp  sample.cpp  score.cpp  score.h  script_for_jason.py  setup.sh  solve.cpp  solvergui.h  task.cpp  tester.cpp  (+13 more)
demo/: 5-2-2021_puzzle.json  5-2-2021_state.json  5-23-2021_puzzle.json  5-23-2021_state.json  5-9-2021_puzzle.json  (+7 more)
flamingo/src/common/: CMakeCache.txt  CMakeCache.txt.safe  CMakeLists.txt  Makefile  cmake_install.cmake
flamingo/src/common/src/: compressionargs.cc  compressionargs.h  filtertypes.cc  filtertypes.h  gramgen.cc  gramgen.cc~  gramgen.h  gramgen.h~  query.cc  query.h  simmetric.cc  simmetric.h  simmetric.h~  tr1_local.h  tr1_local.h~  typedef.cc  typedef.h  unittest.cc
flamingo/src/filtertree/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
flamingo/src/filtertree/src/: example.cc  filtertreenode.cc  filtertreenode.h  ftindexerabs.cc  ftindexerabs.h  ftindexercombinelists.cc  ftindexercombinelists.h  ftindexerdiscardlists.cc  ftindexerdiscardlists.h  ftindexermem.cc  ftindexermem.h  ftindexermemabs.cc  ftindexermemabs.h  ftindexerondisk.cc  ftindexerondisk.h  ftsearcherabs.cc  ftsearcherabs.h  ftsearchermem.cc  ftsearchermem.h  ftsearcherondisk.cc  ftsearcherondisk.h  gramlist.h  gramlistondisk.cc  gramlistondisk.h  gramlistsimple.cc  gramlistsimple.h  gramlistunion.cc  gramlistunion.h  perftest.cc  statsgen.cc  statsgen.h  statsutil.cc  statsutil.h  stringcontainer.cc  stringcontainer.h  stringrm.cc  stringrm.h  unittest.cc
flamingo/src/filtertree/src/wrappers/: example.cc  wrapperabs.h  wrappercombinelists.h  wrapperdiscardlists.h  wrapperondisk.h  wrappers.cc  wrappers.h  wrappersimple.h
flamingo/src/lbaktree/: CMakeLists.txt  README
flamingo/src/lbaktree/src/: example.cc  kwdsstorage.cc  kwdsstorage.h  lbaktree.cc  lbaktree.h
flamingo/src/lbaktree/src/rstartree/: rstartree.cc  rstartree.h  storage.cc  storage.h  util.cc  util.h
flamingo/src/listmerger/: CMakeLists.txt  Makefile  cmake_install.cmake
flamingo/src/listmerger/src/: divideskipmerger.cc  divideskipmerger.h  example.cc  heapmerger.h  listmerger.h  mergeoptmerger.cc  mergeoptmerger.h  mergeskipmerger.cc  mergeskipmerger.h  ondiskmergerabs.h  ondiskmergeradapt.cc  ondiskmergeradapt.h  ondiskmergersimple.cc  ondiskmergersimple.h  scancountmerger.h  unittest.cc
flamingo/src/listmerger/src/mergeoptvariants/: mergeoptmerger_array.h  mergeoptmerger_heap_batch.h  mergeoptmerger_heap_pipelined.h  mergeoptmerger_scancount_batch_candids.h  mergeoptmerger_scancount_batch_minmaxrange.h  mergeoptmerger_scancount_pipelined_allids.h  mergeoptmerger_scancount_pipelined_candids.h
flamingo/src/partenum/: CMakeLists.txt
flamingo/src/partenum/src/: example.cc  partenum.cc  partenum.h  unittest.cc
flamingo/src/sepia/: CMakeLists.txt
flamingo/src/sepia/src/: duplicate.cc  duplicate.h  example.cc  perftest.cc  sample.cc  sample.h  sepia.cc  sepia.h  unittest.cc
flamingo/src/sepia/src/cluster/: cluster.cc  cluster.h  clusters.cc  clusters.h  ftable.cc  ftable.h  lexic.cc  lexic.h  medoids.cc  medoids.h
flamingo/src/sepia/src/freqest/: errorcorr.cc  errorcorr.h  freqest.cc  freqest.h  predicate.cc  predicate.h  record.cc  record.h  test.cc  test.h  update.cc  update.h
flamingo/src/sepia/src/ppdtable/: allrand.cc  allrand.h  closelex.cc  closelex.h  closerand.cc  closerand.h  closeunique.cc  closeunique.h  indexentry.cc  indexentry.h  ppdentry.cc  ppdentry.h  ppdpair.cc  ppdpair.h  ppdsample.cc  ppdsample.h  ppdtable.cc  ppdtable.h  ppdtriple.cc  ppdtriple.h
flamingo/src/sepia/src/simfunc/: editvect.cc  editvect.h  jaccvect.cc  jaccvect.h  simdist.cc  simdist.h  simvect.cc  simvect.h
flamingo/src/stringmap/: CMakeLists.txt  README-RTREE.txt
flamingo/src/stringmap/src/: editdistance.cpp  editdistance.h  element.cpp  element.h  index.cpp  index.h  mapper.cpp  mapper.h  node.cpp  rect.cpp  rtreeparams.h  split_l.cpp  split_l.h  split_q.cpp  split_q.h  stringmap.cpp  stringmap.h  stringmap_unittest.cpp
flamingo/src/topk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  util.py
flamingo/src/topk/src/: display.cc  display.cc~  display.h  example.cc  foreign_listmerger.h  foreign_util.h  misc.cc  misc.h  misc.h~  perftest.cc  perftest_exps.cc  perftest_exps.h  perftest_util.cc  perftest_util.h  topk.cc  topk.h  topkbase.h  topkheap.cc  topkheap.h  topkheap.h~  topkheap.v1.cc  topkheap.v1.h  topkindex.cc  topkindex.cc~  topkindex.h  topkindex.h~  topkindex.v1.cc  topkindex.v1.cc~  topkindex.v1.h  topkindex.v1.h~  topkiterative.cc  topkiterative.h  topkiterative.h~  topkroundrobin.cc  topkroundrobin.h  topkroundrobin.h~  topkscan.cc  topkscan.h  topksearch.cc  topksearch.cc~  (+6 more)
flamingo/src/topk/src/oldlistmerger/: counttable.cc  counttable.h  divideskipmerger.h  divideskipmerger.h~  example.cc  heap.cc  heap.h  heapmerger-pq.cc  heapmerger.cc  heapmerger.h  listmerger.h  mergeoptmerger.h  mergeskipmerger.h  mergeskipplusmerger.cc  mergeskipplusmerger.h  mergeskiptest.cc  mergeskiptest.h  ondiskmergerabs.h  ondiskmergeradapt.cc  ondiskmergeradapt.h  ondiskmergerfixedlists.cc  ondiskmergerfixedlists.h  ondiskmergersimple.h  scancountmerger.cc  scancountmerger.h  showutil.cc  showutil.h  unittest.cc  utilities.cc  utilities.h
flamingo/src/util/: CMakeLists.txt  Makefile  cmake_install.cmake
flamingo/src/util/src/: appsearch.cc  appsearch.h  array.cc  array.h  array.h~  debug.h  gram.cc  gram.h  gram.h~  input.cc  input.h  io.cc  io.h  looptimer.cc  looptimer.h  misc.cc  misc.h  misc.h~  output.cc  output.h  output.h~  querygrams.cc  querygrams.h  querygroup.cc  querygroup.h  range.cc  range.h  scan.cc  scan.h  simfuncs.cc  simfuncs.h  speedtest.cc  stringshuffler.cc  stringshuffler.h  time.cc  time.h  unittest.cc
(+49 files in other folders)
